--- a/index.html
+++ b/index.html
@@ -17,3 +17,6 @@
 <button onclick="https://www.instagram.com/srgsbrnn/?hl=id ='default.asp'">My Instagram</button>
 	<h4></h4>
 <p4>Salam hangat, Sarang.</p4>
+	<img src="cinta.jpg">
+	</body>
+	</html>
