--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>BIODATAKU</title>
 </head>
 <body>
-	<h1>BIODATA CINTA</h1>
+	<h1 style="text-align:center"> BIODATA CINTA</h1>
 <ul>
 	<li> Nama	: Gia Cinta Sabrina</li>
 	<li> Nicknamee	: Sarang</li>
