--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1 style="text-align:center"> BIODATA CINTA</h1>
 <ul>
 	<li> Nama	: Gia Cinta Sabrina</li>
-	<li> Nicknamee	: Sarang</li>
+	<li> Nickname	: Sarang</li>
 	<li> TTL	: Padang, 17 Desember 2003</li>
 	<li> Alamat	: Juanda Green Residence No. 10, Depok</li>
 	<li> ID Line	: sarang123</li>
