--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 <button onclick="https://www.instagram.com/srgsbrnn/?hl=id ='default.asp'">My Instagram</button>
 	<h4></h4>
 	<img src="cinta.jpg"style="widht:200px;height:300px;">
-	<p4>Salam hangat, Sarang.</p4>
+<p4 style="text-align:center">Salam hangat, Sarang.</p4>
 	</body>
 	</html>
