--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html> 
-<head>
 	<head>
 		<title>Biodata Cinta</title>
 	</head>
-	<title>BIODATAKU</title>
-</head>
 <body>
+<link rel="stylesheet"type="text/css"href="stylesheet.css">
 	<h1 style="text-align:center"> BIODATA CINTA</h1>
 <ul>
 	<li> Nama	: Gia Cinta Sabrina</li>
