--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 <body>
 <link rel="stylesheet"type="text/css"href="stylesheet.css">
-	<h1 style="text-align:center"> BIODATA CINTA</h1>
+	<h1> BIODATA CINTA</h1>
 <ul>
 	<li> Nama	: Gia Cinta Sabrina</li>
 	<li> Nickname	: Sarang</li>
