--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 	<h2></h2>
 <p>Kenapa kok sekolahnya di Smakbo? Let say, itu buan kemauanku tapi kemauan keluarga dan orang tua. Awalnya berat, tapi kalo mau diratapi terus ya ga akan ada habisnya. Makin lama makin enjoy apalagi kalo punya temen temen yang suportif, rasanya semuanya bisa dijalani dengan enjoy. Kalo menurut aku sih, survive di sakbo itu gampang gampang susah, kuncinya cuma satu kayaknya, ikhlas dan Let it be:) oh ada satu lagi, cari kegiatan yang kita sukai dan everything is gonna be fine hehe.
 	<h3></h3>
-<p>Aku rasa cukup sampi disini perkenalanku. Kalau kalian ingin tahu lebih lanjut tentang keseharianku, bisa klik tombol dibawah untuk melihat profil instagramku. Terimakasih!!
-
-<button onclick="https://www.instagram.com/srgsbrnn/?hl=id ='default.asp'">My Instagram</button>
+<p>Aku rasa cukup sampi disini perkenalanku. Kalau kalian ingin tahu lebih lanjut tentang keseharianku, bisa klik tombol dibawah untuk melihat profil instagramku. Terimakasih!! 
 	<h4></h4>
 	<img src="cinta.jpg"style="widht:200px;height:300px;">
-<p1 style="text-align:center">Salam hangat, Sarang.</p1>
+<p1>Salam hangat, Sarang.</p1>
 	</body>
 	</html>
